fixed container gap

--- a/src/css/benefits.css
+++ b/src/css/benefits.css
@@ -9,7 +9,11 @@ flex-direction: row;
 flex-wrap: wrap;
 
 }
-
+@media only screen and (min-width: 1440px) {
+  .benefits.container {
+    gap: 24px;
+  }
+}
 .benefits-content-wrapper{
 margin-bottom: 32px;
 
@@ -23,7 +27,6 @@ margin-bottom: 32px;
 @media only screen and (min-width: 1440px) {
   .benefits-main-wrapper {
     padding: 25px 0;
-    padding-left: 24px;
   }
 }
 
